k8s/hapi-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hapi-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hapi.vinayak-tech.de"
    - "funny-erp.vinayak-tech.de"
      #- port:
      #number: 8080
      #name: http-wc
      #protocol: HTTP
      #hosts:
      #- "*"
---
