k8s/erpnext-funny-site-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: erpnext-vserver
spec:
  hosts:
  - funny-erp.vinayak-tech.de
  gateways:
  - hapi-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: frappe-bench-001-erpnext.erpnext.svc.cluster.local 
        port:
          number: 80
